--- a/why.html
+++ b/why.html
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 			<div class="blurry">
-				<img src="blurrytreeswhy.JPG">
+				<img src="blurrytreeswhy.jpg">
 		</div>
 		<div class="subcon">
 			<div class="questionleft">
