--- a/aesthetics.html
+++ b/aesthetics.html
@@ -30,16 +30,16 @@
 			</div>
 		<div class="subconnn">
 			<div class="pink">
-				<img src="pinkaesthetic.JPG">
+				<img src="pinkaesthetic.jpg">
 			</div>
 			<div class="yellow">
-				<img src="yellowaesthetic.JPG">
+				<img src="yellowaesthetic.jpg">
 			</div>
 			<div class="sad">
-				<img src="sadaesthetic.JPG">
+				<img src="sadaesthetic.jpg">
 			</div>
 			<div class="blue">
-				<img src="blueaesthetic.JPG">
+				<img src="blueaesthetic.jpg">
 			</div>
 		</div>
 			<div class="mine">
