--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
 	  				Christmas Bear
 	  			</div>
 	  			<div class="panel">
-					<img src="Nature Tunnel.JPG">
+					<img src="Nature Tunnel.jpg">
 	  				<br>
 	  				Tunnel of Beauty
 	  			</div>
@@ -54,7 +54,7 @@
 	  				Pretty Pink Flowers
 	  			</div>
 	  			<div class="panel">
-	  				<img src="Rice.JPG">  		
+	  				<img src="Rice.jpg">  		
 	  				<br>
 	  				Neat Bowl of Rice
 	  			</div>
@@ -74,12 +74,12 @@
 	  				Blooming Flower of Pink			
 	  			</div>
 	  			<div class="panel">
-	  				<img src="Blurry Trees.JPG">
+	  				<img src="Blurry Trees.jpg">
 	  				<br>
 	  				Blurry Highway	
 	  			</div>
 	  			<div class="panel">
-	  				<img src="Trees.JPG">
+	  				<img src="Trees.jpg">
 	  				<br>
 	  				Kwantlen Forest
 	  			</div>
